Update and rename latdev.html to quicktag.html

--- a/quicktag.html
+++ b/quicktag.html
@@ -11,14 +11,14 @@ body {
 }
 </style>
 <head>
-<title>LAT Tools</title>
+
 <link rel="shortcut icon" href="C:\Users\mwilhalme\Favorites\favicon.ico" type="image/x-icon" />
 <script src="jquery-2.1.1.min.js"></script>
 <script src="functions.js"></script>
 </head>
 <body>
     <div class="center">
-    <h1>Format text</h1>
+    <h1>Quick tags</h1>
     
     <button id="copy">HTML</button>
     <button id="reset">Reset</button>
