--- a/quicktag.html
+++ b/quicktag.html
@@ -12,7 +12,7 @@ body {
 </style>
 <head>
 
-<link rel="shortcut icon" href="C:\Users\mwilhalme\Favorites\favicon.ico" type="image/x-icon" />
+<link rel="shortcut icon" href="insert logo here" type="image/x-icon" />
 <script src="jquery-2.1.1.min.js"></script>
 <script src="functions.js"></script>
 </head>
